docs-kits_versioned_docs/version-24.12/kits/Traceability Kit/page_changelog.mdx
---
id: Traceability Kit Changelog
title: Changelog
description: 'Traceability Kit'
sidebar_position: 0
---

<!---
This work is licensed under the CC-BY-4.0 (https://creativecommons.org/licenses/by/4.0/legalcode).

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2023 BASF SE
- SPDX-FileCopyrightText: 2023 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
- SPDX-FileCopyrightText: 2023 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST & Fraunhofer IML)
- SPDX-FileCopyrightText: 2023 German Edge Cloud GmbH & Co. KG
- SPDX-FileCopyrightText: 2023 Mercedes Benz AG
- SPDX-FileCopyrightText: 2023 Robert Bosch Manufacturing Solutions GmbH
- SPDX-FileCopyrightText: 2023 SAP SE
- SPDX-FileCopyrightText: 2023 Siemens AG
- SPDX-FileCopyrightText: 2023 T-Systems International GmbH
- SPDX-FileCopyrightText: 2023 ZF Friedrichshafen AG
- SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
- Source URL: https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kits/Traceability%20Kit (latest version)
--->


import Notice from './part_notice.mdx'

![Traceability kit banner](@site/static/img/kits/traceability/traceability-kit-logo.drawio.svg)

All notable changes to this Kit will be documented in this file.

## [6.0.1] - 2024-12-20

- Changed:
    - updated referenced SpecialCahracteristics aspect model to correct version
    - updated SpecialCharacteristics aspect model examples

## [6.0.0] - 2024-12-01

Compatible for **release 24.12**.

### Added

-**Business View:**
  - **Block Notifications:**
    - Added new sub-section 'Block Notifications' to introduce the new feature including a picture for further explanation
  - **Special Characteristics:**
    - Added new section to introduce the special characteristics in general
- **Architecture View:**
  - **Traceability Components:**
    - Enhanced the existing table 'Traceability Components' by adding a new line for the block notification feature
  - **Functional Requirements:**
    - Enhanced the existing table 'Functional Requirements' by adding a new row for the block notification feature
  - **Digital Twins and Aspect Models:**
    - Added references of two new aspect models (SoftwareInformation 1.0.0, CertificateSigningRequests 1.0.0)
  - **Traceability Apps:**
    - Added new sub-section 'Block Information' to describe the Notification State Model inclusive the corresponding state model picture
  - **Runtime View:**
    - Added references to the coressponding sections of the HTTP Endpoints for the notifications
    - Added new sub-sections to describe the processes for sending, updating and resolving block notifications including its UML sequence diagrams
  - **Standards:**
    - Added reference to latest Traceability Use Case Standard v.2.0.0
- **Development View:**
  - **App Provider:**
    - **Block Notifications:**
      - Added new sub-sections to describe the Block Notifications state model and the new Block Notification API specification
    - **Asset Creation:**
      - Added two lines for the typizations 'ReceiveBlockNotification' and 'UpdateBlockNotification' of the new block notifications
    - **Policy Creation:**
      - Added two lines to specify the needed (usage) policies for quality- and block notifications
   - **Data Provider:**
    - **Aspect Models:**
        - Added the new SpecialCharacteristics model to the aspect model overview
    - **Special Characteristics:**
        - Added a new section to describe and reference the aspect model for special characteristics including JSON examples

### Changed
- **Architecture View:**
  - **Build Block View:**
    - Updated the Traceability architecture picture with new description regarding Block Notifications
  - **Runtime View:**
    - Adapted / restructured the remarks text block to be applicable for quality- and the new block notifications
- **Development View:**
  - **App Provider:**
    - **Quality Notification API:**
      - The last sentence, which mentions the Notification APIs, has been restructured to make the references to the Notification API specifications more visible
    - **Asset Creation:**
      - Fixed / changed asset typization from 'ReceiveQualityAlertNotification' to 'UpdateQualityAlertNotification'

### Removed
- **Architecture View:**
  - **Standards:**
    - Removed references to deprecated Traceability standards

## [5.1.1] - 2024-08-18

### Changed

- **Operation View:**
    - Correct link to INSTALL.md

## [5.1.0] - 2024-07-24

Compatible for **release 24.08**.

### Added

- **Development View:**
  - **Data Provider:**
    - Added new section for the aspect model [SoftwareInformation](https://eclipse-tractusx.github.io/docs-kits/kits/Traceability%20Kit/Software%20Development%20View/Data%20Provider%20Development%20View%20Traceability%20Kit/#softwareinformation)
    - Added new section for the aspect model [CertificateSigningRequests](https://eclipse-tractusx.github.io/docs-kits/kits/Traceability%20Kit/Software%20Development%20View/Data%20Provider%20Development%20View%20Traceability%20Kit/#certificatesigningrequests)
    - Added aspect models SoftwareInformation and CertificateSigningRequests into the aspect model overview

### Changed

- **Development View:**
  - **App Provider:**
    - Replace use case specific FrameworkAgreement rightOperand with the new, consolidated DataExchangeGovernance released with 2408

## [5.0.1] - 2024-05-22

### Changed

- **Development View:**
  - **App Provider:**
    - Remove space before 'http' in namespaces (linter issue?)
    - Use 'Set' instead of 'Policy' because of EDC data management API
    - prefix UsagePurpose rightOperands with according value namespace "cx.core.*"
    - Remove version from cx-policy namespace (which used to be there in a very early draft only)
    - Update FrameworkAgreement rightOperand with upper case credential names as recently agreed and updated in Catena-X ODRL profile

## [5.0.0] - 2024-05-06

Compatible for **release 24.05**.

### Added

- **Development View:**
  - **App Provider:**
    - Created initial version for data consumer and app provider
    - Created optional quality notification API version 2.0.0

### Changed

- **Development View:**
  - **App Provider:**
    - Changed mandatory quality notification API version 1.2.1 (- formerly 1.2.0 -)

### Removed

- **Development View:**
  - Removed generated Notification API documentation (know directly available as Open API file)
  - **Data Provider:**
    - Removed aspects SingleLevelUsageAsPlanned and SingleLevelUsageAsBuilt, because these aspects moved to the Industry Core
    - (Re)moved policy section to the [Industry Core KIT](../Industry%20Core%20Kit/Software%20Development%20View/Policies%20Development%20View%20Industry%20Core%20Kit)
  - **App Provider:**
    - Removed quality notification API version 1.1.0

## [4.0.0] - 2024-02-28

Compatible for **release 24.03**.

### Added

- **Business View:**
  - Additional information about quality notifications

### Changed

- **General:**
  - Migrated content related to Industry Core to new Industry Core KIT
  - New Traceability KIT logo
- **Business View:**
  - Full rework with rewritten business descriptions
- **Architecture View:**
  - Notification state model updated
- **Development View:**
  - New Notification API version 1.2.0 (optional; version 1.1.0 mandatory)
  - **Data Provider:**
    - Usage Policies: Add more details and links about the framework agreement
    - Usage Policies: Add information for individual contracts between two companies as purpose-based policy

## [3.0.0] - 2023-11-29

Compatible for **release 23.12**.

### Added

- **Architecture View:**
  - Added assumptions and non-functional requirements for Traceability architecture
- **Development View:**
  - **Data Provider:**
    - Added a description of the purpose why `assetLifecylePhase` was added as specific asset ID

### Changed

- **General:**
  - Restructure from adoption, operation and development view to business, architecture, operation and development view
  - License KIT to CC-BY-4.0
- **Architecture View:**
  - Update links to the latest versions of the Catena-X standards
- **Development View:**
  - **Data Provider:**
    - Updated aspect model SingleLevelBoMAsPlanned from version 1.1.0 to 2.0.0
    - Updated aspect model SingleLevelBomAsBuilt from version 1.0.0 to 2.0.0
    - Updated example for creation of the aspect model SingleLevelBomAsBuilt regarding version 2.0.0
    - Updated EDC asset props for unique ID push

## [2.0.0] - 2023-09-28

Compatible for **release 23.09 (also known as 3.2)**.

### Added

- **Adoption View:**
  - TractionBatteryCode aspect model
  - Information about Verifiable Credentials
- **Development View:**
  - TractionBatteryCode aspect model

### Changed

- **General:**
  - Updated all parts of the KIT related to the digital twin registry as the DTR now has a decentralized architecture
  - Updated SerialPartTypization 1.1.1 to SerialPart 1.0.1
  - Updated AssemblyPartRelationship 1.1.1 to SingleLevelBomAsBuilt 1.0.0
  - Updated aspect model Batch from version 1.0.2 to 2.0.0 ([Release Notes](https://github.com/eclipse-tractusx/sldt-semantic-models/blob/main/io.catenax.batch/RELEASE_NOTES.md))
  - Fixed references to deprecated releases
- **Adoption View:**
  - Updated description of the policy section (Access Policies, Usage Policies, Contract Definitions)
  - Updated relevant standards for release 3.2
- **Development View:**
  - Updated documentation because of the migration to the new standard AAS v3.0 by the DTR
  - Updated conventions for submodel descriptors and EDC asset structure to give data provides more flexibility in how to create EDC assets for submodels of digital twins
  - Setting the visibility of entries in a digital twin's specifid asset IDs is now mandatory to ensure need-know
  - Removed optional customer attributes from example for Batch aspect model
  - Updated purpose for Unique ID Push notifications to be compliant to the framework agreement for Traceability

### Removed

- **Adoption View:**
  - Policy payloads are removed and replaced by specific documentation links

## [1.0.1] - 2023-04-14

Compatible for **release 3.1**.

### Added

- **Adoption View:**
  - Traceability tutorial video
  - Customer journey

## [1.0.0] - 2023-04-12

Compatible for **release 3.1**.

### Added

- Initial version of the Kit including adoption, operation and development view + two API specifications (Notification API, Unique ID Push API)

<Notice components={props.components} />
